<resources>
    <string name="app_name">Currency Converter</string>

    <!-- Converter Screen -->
    <string name="convertor_small_title">Contact</string>
    <string name="converter_title">Currency\nConverter</string>
    <string name="converter_from_hint">From</string>
    <string name="converter_to_hint">To</string>
    <string name="converter_amount_hint">Amount</string>
    <string name="converter_convert_button_text">Convert</string>
    <string name="converter_result_hint_text">Result</string>

    <!-- Currencies Screen -->
    <string name="currencies_search_hint">Search</string>
    <string name="currencies_title">Currencies</string>
    <string name="currencies_icon_content_description">Currency Icon</string>

    <!-- Exchange Rate Screen -->
    <string name="exchange_rate_title">Exchange Rate</string>

    <!-- Currencies -->
    <string name="currency_uae_dirham">UAE Dirham</string>
    <string name="currency_afghan_afghani">Afghan Afghani</string>
    <string name="currency_albania">Albanian Lek</string>
    <string name="currency_armenia">Armenian Dram</string>
    <string name="currency_netherlands_antilles">Netherlands Antillian Guilder</string>
    <string name="currency_angola">Angolan Kwanza</string>
    <string name="currency_argentina">Argentine Peso</string>
    <string name="currency_australia">Australian Dollar</string>
    <string name="currency_aruba">Aruban Florin</string>
    <string name="currency_azerbaijan">Azerbaijani Manat</string>
    <string name="currency_bosnia_herzegovina">Bosnia and Herzegovina Mark</string>
    <string name="currency_barbados">Barbados Dollar</string>
    <string name="currency_bangladesh">Bangladeshi Taka</string>
    <string name="currency_bulgaria">Bulgarian Lev</string>
    <string name="currency_bahrain">Bahraini Dinar</string>
    <string name="currency_burundi">Burundian Franc</string>
    <string name="currency_bermuda">Bermudian Dollar</string>
    <string name="currency_brunei">Brunei Dollar</string>
    <string name="currency_bolivia">Bolivian Boliviano</string>
    <string name="currency_brazil">Brazilian Real</string>
    <string name="currency_bahamas">Bahamian Dollar</string>
    <string name="currency_bhutan">Bhutanese Ngultrum</string>
    <string name="currency_botswana">Botswana Pula</string>
    <string name="currency_belarus">Belarusian Ruble</string>
    <string name="currency_belize">Belize Dollar</string>
    <string name="currency_canada">Canadian Dollar</string>
    <string name="currency_republic_congo">Congolese Franc</string>
    <string name="currency_switzerland">Swiss Franc</string>
    <string name="currency_chile">Chilean Peso</string>
    <string name="currency_china">Chinese Renminbi</string>
    <string name="currency_colombia">Colombian Peso</string>
    <string name="currency_costa_rica">Costa Rican Colon</string>
    <string name="currency_cuba">Cuban Peso</string>
    <string name="currency_cape_verde">Cape Verdean Escudo</string>
    <string name="currency_czech_republic">Czech Koruna</string>
    <string name="currency_djibouti">Djiboutian Franc</string>
    <string name="currency_denmark">Danish Krone</string>
    <string name="currency_dominican_republic">Dominican Peso</string>
    <string name="currency_algeria">Algerian Dinar</string>
    <string name="currency_egypt">Egyptian Pound</string>
    <string name="currency_eritrea">Eritrean Nakfa</string>
    <string name="currency_ethiopia">Ethiopian Birr</string>
    <string name="currency_european_union">Euro</string>
    <string name="currency_fiji">Fiji Dollar</string>
    <string name="currency_falkland_islands">Falkland Islands Pound</string>
    <string name="currency_faroe_islands">Faroese Króna</string>
    <string name="currency_united_kingdom">Pound Sterling</string>
    <string name="currency_georgia">Georgian Lari</string>
    <string name="currency_guernsey">Guernsey Pound</string>
    <string name="currency_ghana">Ghanaian Cedi</string>
    <string name="currency_gibraltar">Gibraltar Pound</string>
    <string name="currency_the_gambia">Gambian Dalasi</string>
    <string name="currency_guinea">Guinean Franc</string>
    <string name="currency_guatemala">Guatemalan Quetzal</string>
    <string name="currency_guyana">Guyanese Dollar</string>
    <string name="currency_hong_kong">Hong Kong Dollar</string>
    <string name="currency_honduras">Honduran Lempira</string>
    <string name="currency_croatia">Croatian Kuna</string>
    <string name="currency_haiti">Haitian Gourde</string>
    <string name="currency_hungary">Hungarian Forint</string>
    <string name="currency_indonesia">Indonesian Rupiah</string>
    <string name="currency_israel">Israeli New Shekel</string>
    <string name="currency_isle_of_man">Manx Pound</string>
    <string name="currency_india">Indian Rupee</string>
    <string name="currency_iraq">Iraqi Dinar</string>
    <string name="currency_iran">Iranian Rial</string>
    <string name="currency_iceland">Icelandic Króna</string>
    <string name="currency_jersey">Jersey Pound</string>
    <string name="currency_jamaica">Jamaican Dollar</string>
    <string name="currency_jordan">Jordanian Dinar</string>
    <string name="currency_japan">Japanese Yen</string>
    <string name="currency_kenya">Kenyan Shilling</string>
    <string name="currency_kyrgyzstan">Kyrgyzstani Som</string>
    <string name="currency_cambodia">Cambodian Riel</string>
    <string name="currency_kiribati">Kiribati Dollar</string>
    <string name="currency_comoros">Comorian Franc</string>
    <string name="currency_south_korea">South Korean Won</string>
    <string name="currency_kuwait">Kuwaiti Dinar</string>
    <string name="currency_cayman_islands">Cayman Islands Dollar</string>
    <string name="currency_kazakhstan">Kazakhstani Tenge</string>
    <string name="currency_laos">Lao Kip</string>
    <string name="currency_lebanon">Lebanese Pound</string>
    <string name="currency_sri_lanka">Sri Lanka Rupee</string>
    <string name="currency_liberia">Liberian Dollar</string>
    <string name="currency_lesotho">Lesotho Loti</string>
    <string name="currency_libya">Libyan Dinar</string>
    <string name="currency_morocco">Moroccan Dirham</string>
    <string name="currency_moldova">Moldovan Leu</string>
    <string name="currency_madagascar">Malagasy Ariary</string>
    <string name="currency_north_macedonia">Macedonian Denar</string>
    <string name="currency_myanmar">Burmese Kyat</string>
    <string name="currency_mongolia">Mongolian Tögrög</string>
    <string name="currency_macau">Macanese Pataca</string>
    <string name="currency_mauritania">Mauritanian Ouguiya</string>
    <string name="currency_mauritius">Mauritian Rupee</string>
    <string name="currency_maldives">Maldivian Rufiyaa</string>
    <string name="currency_malawi">Malawian Kwacha</string>
    <string name="currency_mexico">Mexican Peso</string>
    <string name="currency_malaysia">Malaysian Ringgit</string>
    <string name="currency_mozambique">Mozambican Metical</string>
    <string name="currency_namibia">Namibian Dollar</string>
    <string name="currency_nigeria">Nigerian Naira</string>
    <string name="currency_nicaragua">Nicaraguan Córdoba</string>
    <string name="currency_norway">Norwegian Krone</string>
    <string name="currency_nepal">Nepalese Rupee</string>
    <string name="currency_new_zealand">New Zealand Dollar</string>
    <string name="currency_oman">Omani Rial</string>
    <string name="currency_panama">Panamanian Balboa</string>
    <string name="currency_peru">Peruvian Sol</string>
    <string name="currency_papua_new_guinea">Papua New Guinean Kina</string>
    <string name="currency_philippines">Philippine Peso</string>
    <string name="currency_pakistan">Pakistani Rupee</string>
    <string name="currency_poland">Polish Złoty</string>
    <string name="currency_paraguay">Paraguayan Guaraní</string>
    <string name="currency_qatar">Qatari Riyal</string>
    <string name="currency_romania">Romanian Leu</string>
    <string name="currency_serbia">Serbian Dinar</string>
    <string name="currency_russia">Russian Ruble</string>
    <string name="currency_rwanda">Rwandan Franc</string>
    <string name="currency_saudi_arabia">Saudi Riyal</string>
    <string name="currency_solomon_islands">Solomon Islands Dollar</string>
    <string name="currency_seychelles">Seychellois Rupee</string>
    <string name="currency_sudan">Sudanese Pound</string>
    <string name="currency_sweden">Swedish Krona</string>
    <string name="currency_singapore">Singapore Dollar</string>
    <string name="currency_saint_helena">Saint Helena Pound</string>
    <string name="currency_sierra_leone">Sierra Leonean Leone</string>
    <string name="currency_somalia">Somali Shilling</string>
    <string name="currency_suriname">Surinamese Dollar</string>
    <string name="currency_south_sudan">South Sudanese Pound</string>
    <string name="currency_são_tomé_príncipe">São Tomé and Príncipe Dobra</string>
    <string name="currency_syria">Syrian Pound</string>
    <string name="currency_eswatini">Eswatini Lilangeni</string>
    <string name="currency_thailand">Thai Baht</string>
    <string name="currency_tajikistan">Tajikistani Somoni</string>
    <string name="currency_turkmenistan">Turkmenistan Manat</string>
    <string name="currency_tunisia">Tunisian Dinar</string>
    <string name="currency_tonga">Tongan Paʻanga</string>
    <string name="currency_turkey">Turkish Lira</string>
    <string name="currency_trinidad_tobago">Trinidad and Tobago Dollar</string>
    <string name="currency_tuvalu">Tuvaluan Dollar</string>
    <string name="currency_taiwan">New Taiwan Dollar</string>
    <string name="currency_tanzania">Tanzanian Shilling</string>
    <string name="currency_ukraine">Ukrainian Hryvnia</string>
    <string name="currency_uganda">Ugandan Shilling</string>
    <string name="currency_united_states">United States Dollar</string>
    <string name="currency_uruguay">Uruguayan Peso</string>
    <string name="currency_uzbekistan">Uzbekistani Som</string>
    <string name="currency_venezuela">Venezuelan Bolívar Soberano</string>
    <string name="currency_vietnam">Vietnamese Đồng</string>
    <string name="currency_vanuatu">Vanuatu Vatu</string>
    <string name="currency_samoa">Samoan Tālā</string>
    <string name="currency_cemac">Central African CFA Franc</string>
    <string name="currency_eastern_caribbean_states">East Caribbean Dollar</string>
    <string name="currency_international_monetary_fund">Special Drawing Rights</string>
    <string name="currency_cfa">West African CFA franc</string>
    <string name="currency_doutre_mer">CFP Franc</string>
    <string name="currency_yemen">Yemeni Rial</string>
    <string name="currency_south_africa">South African Rand</string>
    <string name="currency_zambia">Zambian Kwacha</string>
    <string name="currency_zimbabwe">Zimbabwean Dollar</string>
</resources>